Added Html and java

--- a/index.html
+++ b/index.html
@@ -2,36 +2,32 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <link href="css/styles.css" rel="stylesheet">
-    <title>The Web Myster: Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portal for assignment for WDD 230 for easy access and review.">
+    
+    <link href="assets/css/styles.css" rel="stylesheet">
+    <title>WDD 230: Assignment Portal</title>
   </head>
 
   <body>
     <header>
-      <h1>The Web Myster</h1>
-      <h2>Best Coder in Town</h2>
+      <h1>Matthew J. Felton</h1>
     </header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#">Agenda</a></li>
-        <li><a href="#">Schedule</a></li>
-      </ul>
-    </nav>
     <main>
-      <h1>Home</h1>
-      <img src="images/alaska.jpg" alt="Photo of Alaska">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <ol>
-        <li>Bootstrap</li>
-        <li>Materialize</li>
-        <li>Foundation</li>
-      </ol>
+      <h1>WDD 230: Assignment Portal</h1>
+      <img id="matthew" src="assets/images/myself.jpg" alt="Photo of Myself">
+      <ul>
+        <li>Lesson 02: <a href="#">Assignment Link</a></li>
+        <li>Lesson 03: <a href="#">Assignment Link</a></li>
+        <li>Lesson 04: <a href="#">Link</a> | <a href="#">Link</a></li>
+      </ul>
     </main>
     <footer>
-      &copy; Matthew Felton 2021
+      <p>&copy; <span id="getYear"></span> | Matthew J. Felton | Alabama | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
+      <br/><span id="modified"></span>
     </footer>
-    <h1>My First Github Page</h1>
-    <p>This change is being made on my computer</p>
+    <script type="text/javascript" src="assets/js/date.js"></script>
+    <script type="text/javascript" src="assets/js/lastupdated.js"></script>
+    
   </body>
 </html>
