updated css and errors

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <h1 id="pheader">Matthew J. Felton</h1>
     </header>
     <main>
-      <h2 id="subheader">WDD 230: Assignment Portal</h1>
+      <h2 id="subheader">WDD 230: Assignment Portal</h2>
         <hr>
       
-      <nav >
+      <nav>
         <ul>
           <li>Lesson 02: <a class="assignments" href="#">Assignment Link</a></li>
           <li>Lesson 03: <a class="assignments" href="#">Assignment Link</a></li>
@@ -25,13 +25,13 @@
       </nav>
     </main>
     <footer>
-      <p>&copy; <span id="getYear"></span> | Matthew J. Felton | Alabama | <a id="slink"href="https://www.byui.edu/online">BYUI Online Learning</a></p>
+      <p>&copy; <span id="getYear"></span> | Matthew J. Felton | Alabama | <a id="slink"  href="https://www.byui.edu/online">BYUI Online Learning</a></p>
       <span id="modified"></span>
     </footer>
     <!--script for current date and year-->
-    <script type="text/javascript" src="assets/js/date.js"></script>
+    <script src="assets/js/date.js"></script>
     <!--script for last updated-->
-    <script type="text/javascript" src="assets/js/lastupdated.js"></script>
+    <script src="assets/js/lastupdated.js"></script>
     
   </body>
 </html>
