--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portal for assignment for WDD 230 for easy access and review.">
     <link href="assets/css/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/normalize.css">
     <title>WDD 230: Assignment Portal</title>
   </head>
   <body>
