--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portal for assignment for WDD 230 for easy access and review.">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Cinzel&family=Frank+Ruhl+Libre&family=Merriweather&family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/normalize.css">
-    <link href="assets/css/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/small.css">
+    <link rel="stylesheet" href="assets/css/medium.css">
     <title>WDD 230: Assignment Portal</title>
   </head>
   <body>
@@ -17,8 +17,6 @@
     </header>
     <main>
       <h2 id="subheader">WDD 230: Assignment Portal</h2>
-        <hr>
-      
       <nav>
         <ul>
           <li>Lesson 02: <a class="assignments" href="#">Assignment Link</a></li>
