added link to portal

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h2 id="subheader">WDD 230: Assignment Portal</h2>
       <nav>
         <ul>
-          <li>Lesson 02: <a class="assignments" href="#">Assignment Link</a></li>
+          <li>Lesson 02: <a class="assignment" href="ranch">Ranch Project</a></li>
           <li>Lesson 03: <a class="assignments" href="#">Assignment Link</a></li>
           <li>Lesson 04: <a class="assignments" href="#">Link</a> | <a class="assignments" href="#">Link</a></li>
         </ul>
