--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -17,7 +17,6 @@
         <h1>Design Principles Document</h1>
         <h2>Matthew J. Felton</h2>
     </header>
-    <nav></nav>
     <main>
         <div id="main-grid">
             <div class="item">
@@ -40,7 +39,7 @@
             <div class="item">
                 <h2>Contrast</h2>
                 <h3>GitHub</h3>
-                <a class="link" href="https://github.com/">www.github.com<a>
+                <a class="link" href="https://github.com/">www.github.com</a>
                 <img src="images/contrast.jpg" alt="Github homepage">
                 <p>Github a wonderful site I'm just beginning to learn, and its a pretty good representation of contrast. 
                     The contrast between the background and the sign up button allows it to pop out at new users. and as you go down 
