changed id to class added margin

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -18,7 +18,7 @@
         <h2>Matthew J. Felton</h2>
     </header>
     <main>
-        <div id="main-grid">
+        <div class="main-grid">
             <div class="item">
                 <h2>Reptition</h2>
                 <h3>Jack's Family Restraunts</h3>
