--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -16,7 +16,7 @@
 <header>
     <img src="images/logo.svg" alt="enlightened day logo">
     <h1>Enlightened Day</h1>
-    <h2>There always a Bright Side</h2>
+    <h2>There's always a Bright Side</h2>
 </header>
 <nav>
     <ul>
