--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul>
           <li>Lesson 02: <a class="assignment" href="ranch">Ranch Project</a> | <a class="assignments" href="lesson2/design-principles.html">Design Principles</a></li>
           <li>Lesson 03: <a class="assignments" href="water_cycle">Water Cycle</a> | <a class="assignments" href="lesson3">Enlightened Day Planning Document</a></li>
-          <li>Lesson 04: <a class="assignments" href="#">Link</a> | <a class="assignments" href="#">Link</a></li>
+          <li>Lesson 04: <a class="assignments" href="start-navigation">Start Navigation</a> | <a class="assignments" href="#">Link</a></li>
         </ul>
       </nav>
     </main>
