--- a/start-navigation/index.html
+++ b/start-navigation/index.html
@@ -36,8 +36,8 @@
     
 <!-- NAVIGATION HERE -->
     <nav class="clearfix">
-        <button on click="toggleMenu()">&#9776;</button>
-        <ul id="primaryNav" class="">
+        <button onclick="toggleMenu()">&#9776;</button>
+        <ul id="primaryNav" class="hide">
             <li><a href="#">Home</a></li>
             <li class="active"><a href="#">Products</a></li>
             <li><a href="#">Location</a></li>
