--- a/start-navigation/index.html
+++ b/start-navigation/index.html
@@ -6,7 +6,7 @@
 <meta name="author" content="John Doe">
 
 <!-- This start file was build by Paul Cheney  -->
-<title>HTML5 Start Site by Paul Cheney</title>
+<title>Navigation</title>
 
 <!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -58,7 +58,7 @@
     
 <!-- FOOTER HERE -->   
     <footer>
-        <p>&copy; 201x &bull; Matthew J Felton &bull; 123-555-6789</p>
+        <p>&copy; 2021 &bull; Matthew J Felton &bull; 123-555-6789</p>
     </footer>
     
 <script src="js/scripts.js"></script>
