--- a/lesson4/preston.html
+++ b/lesson4/preston.html
@@ -22,15 +22,17 @@
         <button id="primaryOpen" class="" onclick="toggleMenu()">&#9776;</button>
         <button id="primaryClose" class="disabled" onclick="toggleMenu()">X</button>
     </header>
-    <nav class="maxSize clearfix">
-        <ul id="primaryNav" class="nav disabled">
-            <li><a href="#">Home</a></li>
-            <li><a class="active" href="preston.html">Preston</a></li>
-            <li><a href="#">Soda Springs</a></li>
-            <li><a href="#">Fish Haven</a></li>
-            <li><a href="#">Storm Center</a></li>
-            <li><a href="#">Gallery</a></li>
-        </ul>
+    <nav class="clearfix">
+        <div class="maxSize">
+            <ul id="primaryNav" class="nav disabled">
+                <li><a href="#">Home</a></li>
+                <li><a class="active" href="preston.html">Preston</a></li>
+                <li><a href="#">Soda Springs</a></li>
+                <li><a href="#">Fish Haven</a></li>
+                <li><a href="#">Storm Center</a></li>
+                <li><a href="#">Gallery</a></li>
+            </ul>
+        </div>
     </nav>
     <main class="maxSize">
         <h2> Preston Idaho</h2>
