--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portal for assignment for WDD 230 for easy access and review.">
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Cinzel&family=Frank+Ruhl+Libre&family=Merriweather&family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/normalize.css">
@@ -23,6 +24,7 @@
           <li>Lesson 02: <a class="assignment" href="ranch">Ranch Project</a> | <a class="assignments" href="lesson2/design-principles.html">Design Principles</a></li>
           <li>Lesson 03: <a class="assignments" href="water_cycle">Water Cycle</a> | <a class="assignments" href="lesson3">Enlightened Day Planning Document</a></li>
           <li>Lesson 04: <a class="assignments" href="start-navigation">Start Navigation</a> | <a class="assignments" href="lesson4/preston.html">Preston</a></li>
+          <li>Lesson 05: <a class="assignments" href="#">link</a> | <a class="assignments" href="#">link</a></li>
         </ul>
       </nav>
     </main>
