--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li>Lesson 02: <a class="assignment" href="ranch">Ranch Project</a> | <a class="assignments" href="lesson2/design-principles.html">Design Principles</a></li>
           <li>Lesson 03: <a class="assignments" href="water_cycle">Water Cycle</a> | <a class="assignments" href="lesson3">Enlightened Day Planning Document</a></li>
           <li>Lesson 04: <a class="assignments" href="start-navigation">Start Navigation</a> | <a class="assignments" href="lesson4/preston.html">Preston</a></li>
-          <li>Lesson 05: <a class="assignments" href="#">link</a> | <a class="assignments" href="#">link</a></li>
+          <li>Lesson 05: <a class="assignments" href="lesson5/preston.html">Preston V2</a></li>
         </ul>
       </nav>
     </main>
