--- a/lesson5/preston.html
+++ b/lesson5/preston.html
@@ -76,7 +76,7 @@
                     <h3>Email:</h3>
                     <p>contact@yoururl.com</p>
                 </section>
-                <a href="https://www.google.com/maps/place/Preston,+ID+83263/@42.0998053,-111.9153444,13z/data=!3m1!4b1!4m5!3m4!1s0x8754f78c7cda6c31:0xf1b3b4fc465a4a3f!8m2!3d42.0963133!4d-111.8766173">
+                <a class="googlemap" href="https://www.google.com/maps/place/Preston,+ID+83263/@42.0998053,-111.9153444,13z/data=!3m1!4b1!4m5!3m4!1s0x8754f78c7cda6c31:0xf1b3b4fc465a4a3f!8m2!3d42.0963133!4d-111.8766173">
                     <img class="googlemap" src="images/googlemap.PNG" alt="map of Preston">
                 </a>
             </div>  
