--- a/lesson5/preston.html
+++ b/lesson5/preston.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="css/large.css">
 </head>
 <body>
+    <div class="promotion"> Saturday = Preston Pancakes in the Park! <br> 9:00 a.m. Saturday at the city park pavilion.</div>
     <header>
-        <div class="announcement"></div>
         <div class="full_header flex clearfix">
             <section class="logo">
                 <img src="images/logo.svg" alt="logo for enlightened day">
