--- a/lesson5/preston.html
+++ b/lesson5/preston.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/large.css">
 </head>
 <body>
-    <div class="promotion"> Saturday = Preston Pancakes in the Park! <br> 9:00 a.m. Saturday at the city park pavilion.</div>
+    <div id="popup"> Saturday = Preston Pancakes in the Park! <br> 9:00 a.m. Saturday at the city park pavilion.</div>
     <header>
         <div class="full_header flex clearfix">
             <section class="logo">
