--- a/lesson5/preston.html
+++ b/lesson5/preston.html
@@ -59,7 +59,36 @@
                 </div>
             </section>
         </div>
-        <div class="placeholder">Coming Soon: 5 day forecast</div>
+        <div class="forecast">
+            <h2>Five Day Forecast</h2>
+            <section class="w_forecast">
+            <div class="w_box">
+                <h3>Monday</h3>
+                <img class="w_icon" src="images/sunny.svg" alt="icon of weather forcast">
+                <p><strong>High:</strong> 52&#176</p>
+            </div>
+            <div class="w_box">
+                <h3>Tuesday</h3>
+                <img class="w_icon" src="images/cloudy.svg" alt="icon of weather forcast">
+                <p><strong>High:</strong> 42&#176</p>
+            </div>
+            <div class="w_box">
+                <h3>Wednesday</h3>
+                <img class="w_icon" src="images/storm.svg" alt="icon of weather forcast">
+                <p><strong>High:</strong> 35&#176</p>
+            </div>
+            <div class="w_box">
+                <h3>Thursday</h3>
+                <img class="w_icon" src="images/cloudy.svg" alt="icon of weather forcast">
+                <p><strong>High:</strong> 40&#176</p>
+            </div>
+            <div class="w_box">
+                <h3>Friday</h3>
+                <img class="w_icon" src="images/sunny.svg" alt="icon of weather forcast">
+                <p><strong>High:</strong> 60&#176</p>
+            </div>
+        </section>
+        </div>
         <div class="article">
             <h2>Article Title</h2>
             <img class="top" src="images/article.jpeg" alt="man by building">
