--- a/lesson5/preston.html
+++ b/lesson5/preston.html
@@ -16,9 +16,9 @@
     <div id="popup"> Saturday = Preston Pancakes in the Park! <br> 9:00 a.m. Saturday at the city park pavilion.</div>
     <header>
         <div class="full_header flex clearfix">
-            <section class="logo">
+            <div class="logo">
                 <img src="images/logo.svg" alt="logo for enlightened day">
-            </section>
+            </div>
             <section class="headings">
                 <h1>Enlightened Day</h1>
                 <h2>There's always a Bright Side</h2>
@@ -53,8 +53,8 @@
                 </div>
                 <div class="label_data">
                     <p>Sunny</p>
-                    <p>52&#176</p>
-                    <p>32&#176</p>
+                    <p>52&#176;</p>
+                    <p>32&#176;</p>
                     <p>1 km/h</p>
                 </div>
             </section>
@@ -65,22 +65,22 @@
             <div class="w_box">
                 <h3>Monday</h3>
                 <img class="w_icon" src="images/sunny.svg" alt="icon of weather forcast">
-                <p><strong>High:</strong> 52&#176</p>
+                <p><strong>High:</strong> 52&#176;</p>
             </div>
             <div class="w_box">
                 <h3>Tuesday</h3>
                 <img class="w_icon" src="images/cloudy.svg" alt="icon of weather forcast">
-                <p><strong>High:</strong> 42&#176</p>
+                <p><strong>High:</strong> 42&#176;</p>
             </div>
             <div class="w_box">
                 <h3>Wednesday</h3>
                 <img class="w_icon" src="images/storm.svg" alt="icon of weather forcast">
-                <p><strong>High:</strong> 35&#176</p>
+                <p><strong>High:</strong> 35&#176;</p>
             </div>
             <div class="w_box">
                 <h3>Thursday</h3>
                 <img class="w_icon" src="images/cloudy.svg" alt="icon of weather forcast">
-                <p><strong>High:</strong> 40&#176</p>
+                <p><strong>High:</strong> 40&#176;</p>
             </div>
             <div class="w_box">
                 <h3>Friday</h3>
