--- a/lesson5/preston.html
+++ b/lesson5/preston.html
@@ -85,7 +85,7 @@
             <div class="w_box">
                 <h3>Friday</h3>
                 <img class="w_icon" src="images/sunny.svg" alt="icon of weather forcast">
-                <p><strong>High:</strong> 60&#176</p>
+                <p><strong>High:</strong> 60&#176;</p>
             </div>
         </section>
         </div>
