--- a/lesson5/preston.html
+++ b/lesson5/preston.html
@@ -19,10 +19,10 @@
             <div class="logo">
                 <img src="images/logo.svg" alt="logo for enlightened day">
             </div>
-            <section class="headings">
+            <div class="headings">
                 <h1>Enlightened Day</h1>
                 <h2>There's always a Bright Side</h2>
-            </section>
+            </div>
         </div>
     </header>
     <nav class="clearfix">
