--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <li>Lesson 03: <a class="assignments" href="water_cycle">Water Cycle</a> | <a class="assignments" href="lesson3">Enlightened Day Planning Document</a></li>
           <li>Lesson 04: <a class="assignments" href="start-navigation">Start Navigation</a> | <a class="assignments" href="lesson4/preston.html">Preston</a></li>
           <li>Lesson 05: <a class="assignments" href="lesson5/preston.html">Preston V2</a></li>
+          <li>Lesson 06: <a class="assignments" href="start">Start</a> | <a class="assignments" href="#">#</a></li>
         </ul>
       </nav>
     </main>
