added lesson 6 and did images still need java

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <script src="assets/js/date.js"></script>
     <!--script for last updated-->
     <script src="assets/js/lastupdated.js"></script>
+    <!-- font load for google font-->
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     
   </body>
 </html>
