fixed font loader

--- a/lesson6/preston.html
+++ b/lesson6/preston.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <title>Preston: Enlightened Day</title>
     <meta name="description" content="preston page for weather site">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Patua+One&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
@@ -59,7 +58,7 @@
                 </div>
                 <div class="label_data">
                     <p>Cloudy</p>
-                    <p><span id="temp">37</span>&#176;</p>
+                    <p><span id="temp">37</span>&#176;F</p>
                     <p><span id="windChill"></span></p>
                     <p>30%</p>
                     <p><span id="windSpeed">7</span> mph</p>
