massive push 53 files

--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -6,7 +6,7 @@
 <title>Lazy Load</title>
 <meta name="description" content="Learning how to do lazyload">
 <link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="css/small.css">
+<link rel="stylesheet" href="css/lazyload.css">
 </head>
 <body>
 <header></header>
