--- a/weathersite/fishhaven.html
+++ b/weathersite/fishhaven.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <title>Preston: Enlightened Day</title>
+    <title>Fish Haven: Enlightened Day</title>
     <meta name="description" content="preston page for weather site">
     
     <link rel="stylesheet" href="css/normalize.css">
@@ -30,21 +30,21 @@
         <div class="maxSize">
             <ul id="primaryNav" class="nav disabled">
                 <li><a href="#">Home</a></li>
-                <li><a class="active" href="preston.html">Preston</a></li>
-                <li><a href="#">Soda Springs</a></li>
-                <li><a href="#">Fish Haven</a></li>
+                <li><a href="preston.html">Preston</a></li>
+                <li><a href="sodasprings.html">Soda Springs</a></li>
+                <li><a class="active" href="fishhaven.html">Fish Haven</a></li>
                 <li><a href="#">Storm Center</a></li>
-                <li><a href="gallery-7.html">Gallery</a></li>
+                <li><a href="#">Gallery</a></li>
             </ul>
         </div>
     </nav>
     <main class="maxSize">
-        <h1> Preston Idaho</h1>
+        <h1> Fish Haven Idaho</h1>
         <div class="hero_summary">
             <picture class="hero_img">
-                <source media="(max-width: 500px)" srcset="images/prestonhero500x238.jpg">
-                <source media="(max-width: 1024px)" srcset="images/prestonhero704x335.jpg">
-                <img src="images/prestonhero1024x487.jpg" alt="sizes of hero images"> 
+                <source media="(max-width: 500px)" srcset="images/fishhero500x238.jpg">
+                <source media="(max-width: 1024px)" srcset="images/fishhero704x335.jpg">
+                <img src="images/fishhero1024x487.jpg" alt="view of town">
             </picture>
             <!-- <img class="hero_img" src="images/hero.jpeg" alt="view of a town"> -->
             <section class="summary">
@@ -57,11 +57,11 @@
                     <p>Wind Speed:</p>
                 </div>
                 <div class="label_data">
-                    <p>Cloudy</p>
-                    <p><span id="temp">37</span>&#176;F</p>
+                    <p>Storms</p>
+                    <p><span id="temp">27</span>&#176;F</p>
                     <p><span id="windChill"></span></p>
-                    <p>30%</p>
-                    <p><span id="windSpeed">7</span> mph</p>
+                    <p>15%</p>
+                    <p><span id="windSpeed">5</span> mph</p>
                 </div>
             </section>
         </div>
@@ -70,8 +70,8 @@
             <section class="w_forecast">
             <div class="w_box">
                 <h3>Monday</h3>
-                <img class="w_icon" src="images/sunny.svg" alt="icon of weather forcast">
-                <p><strong>High:</strong> 52&#176;</p>
+                <img class="w_icon" src="images/storm.svg" alt="icon of weather forcast">
+                <p><strong>High:</strong> 32&#176;</p>
             </div>
             <div class="w_box">
                 <h3>Tuesday</h3>
@@ -80,8 +80,8 @@
             </div>
             <div class="w_box">
                 <h3>Wednesday</h3>
-                <img class="w_icon" src="images/storm.svg" alt="icon of weather forcast">
-                <p><strong>High:</strong> 35&#176;</p>
+                <img class="w_icon" src="images/sunny.svg" alt="icon of weather forcast">
+                <p><strong>High:</strong> 45&#176;</p>
             </div>
             <div class="w_box">
                 <h3>Thursday</h3>
@@ -97,7 +97,7 @@
         </div>
         <div class="article">
             <h2>Article Title</h2>
-            <img class="top" src="images/article.jpeg" alt="man by building">
+            <img class="top" src="images/article2.jpg" alt="two people reading">
             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical 
                 Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at 
                 Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a 
@@ -109,7 +109,7 @@
                 The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 
                 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original 
                 form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
-            <img class="bottom" src="images/article.jpeg" alt="man by building">
+            <img class="bottom" src="images/article2.jpg" alt="two people reading">
         </div>
         <div class="contact_us">
             <h2>Contact Us</h2>
@@ -126,8 +126,8 @@
                     <h3>Email:</h3>
                     <p>contact@yoururl.com</p>
                 </section>
-                <a class="googlemap" href="https://www.google.com/maps/place/Preston,+ID+83263/@42.0998053,-111.9153444,13z/data=!3m1!4b1!4m5!3m4!1s0x8754f78c7cda6c31:0xf1b3b4fc465a4a3f!8m2!3d42.0963133!4d-111.8766173">
-                    <img class="googlemap" src="images/googlemap.PNG" alt="map of Preston">
+                <a class="googlemap" href="https://www.google.com/maps/place/Fish+Haven,+ID+83287/@42.0380399,-111.4048681,15z/data=!3m1!4b1!4m5!3m4!1s0x875415e9bdab006f:0xc1864ed86dd2b0e4!8m2!3d42.0371544!4d-111.395956">
+                    <img class="googlemap" src="images/googlemap2.PNG" alt="map of fish haven">
                 </a>
             </div>  
         </div>
