--- a/weathersite/preston.html
+++ b/weathersite/preston.html
@@ -31,10 +31,10 @@
             <ul id="primaryNav" class="nav disabled">
                 <li><a href="#">Home</a></li>
                 <li><a class="active" href="preston.html">Preston</a></li>
-                <li><a href="#">Soda Springs</a></li>
-                <li><a href="#">Fish Haven</a></li>
+                <li><a href="sodasprings.html">Soda Springs</a></li>
+                <li><a href="fishhaven.html">Fish Haven</a></li>
                 <li><a href="#">Storm Center</a></li>
-                <li><a href="gallery-7.html">Gallery</a></li>
+                <li><a href="#">Gallery</a></li>
             </ul>
         </div>
     </nav>
@@ -44,7 +44,7 @@
             <picture class="hero_img">
                 <source media="(max-width: 500px)" srcset="images/prestonhero500x238.jpg">
                 <source media="(max-width: 1024px)" srcset="images/prestonhero704x335.jpg">
-                <img src="images/prestonhero1024x487.jpg" alt="sizes of hero images"> 
+                <img src="images/prestonhero1024x487.jpg" alt="view of town"> 
             </picture>
             <!-- <img class="hero_img" src="images/hero.jpeg" alt="view of a town"> -->
             <section class="summary">
