--- a/lesson6/gallery-7.html
+++ b/lesson6/gallery-7.html
@@ -42,43 +42,43 @@
         <h1>Weather Gallery</h1>
         <div class="gallery">
                 <figure>
-                    <img src="images/placeholder300x250.png" data-src="images/gallery1-300x250.jpg" alt="#">
+                    <img src="images/placeholder300x250.png" data-src="images/gallery1-300x250.jpg" alt="pink sunrise with tree">
                     <figcaption>
                         <p>Pink Sunrise</p>
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="images/placeholder300x250.png" data-src="images/gallery2-300x250.jpg" alt="#">
+                    <img src="images/placeholder300x250.png" data-src="images/gallery2-300x250.jpg" alt="lighting striking water">
                     <figcaption>
                         <p>Lighting</p>
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="images/placeholder300x250.png" data-src="images/gallery3-300x250.jpg" alt="#">
+                    <img src="images/placeholder300x250.png" data-src="images/gallery3-300x250.jpg" alt="snow covered field">
                     <figcaption>
                         <p>Snow filled Field</p>
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="images/placeholder300x250.png" data-src="images/gallery4-300x250.jpg" alt="#">
+                    <img src="images/placeholder300x250.png" data-src="images/gallery4-300x250.jpg" alt="hurriance from space">
                     <figcaption>
                         <p>Hurricane Space view</p>
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="images/placeholder300x250.png" data-src="images/gallery5-300x250.jpg" alt="#">
+                    <img src="images/placeholder300x250.png" data-src="images/gallery5-300x250.jpg" alt="tornado touching ground">
                     <figcaption>
                         <p>Tornado with lighting</p>
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="images/placeholder300x250.png" data-src="images/gallery6-300x250.jpg" alt="#">
+                    <img src="images/placeholder300x250.png" data-src="images/gallery6-300x250.jpg" alt="cloudly sky with a house">
                     <figcaption>
                         <p>Double Rainbow</p>
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="images/placeholder300x250.png" data-src="images/gallery7-300x250.jpg" alt="#">
+                    <img src="images/placeholder300x250.png" data-src="images/gallery7-300x250.jpg" alt="rain droplets on a car window">
                     <figcaption>
                         <p>Wind Storm</p>
                     </figcaption>
