--- a/lesson6/gallery-7.html
+++ b/lesson6/gallery-7.html
@@ -72,25 +72,25 @@
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="images/placeholder300x250.png" data-src="images/gallery6-300x250.jpg" alt="cloudly sky with a house">
+                    <img src="images/placeholder300x250.png" data-src="images/gallery6-300x250.jpg" alt="two rainbows in the sky">
                     <figcaption>
                         <p>Double Rainbow</p>
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="images/placeholder300x250.png" data-src="images/gallery7-300x250.jpg" alt="rain droplets on a car window">
+                    <img src="images/placeholder300x250.png" data-src="images/gallery7-300x250.jpg" alt="wind blowing on a tree">
                     <figcaption>
                         <p>Wind Storm</p>
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="images/placeholder300x250.png" data-src="images/gallery8-300x250.jpg" alt="#">
+                    <img src="images/placeholder300x250.png" data-src="images/gallery8-300x250.jpg" alt="cloudly sky with a house">
                     <figcaption>
                         <p>Cloudly Skys</p>
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="images/placeholder300x250.png" data-src="images/gallery9-300x250.jpg" alt="#">
+                    <img src="images/placeholder300x250.png" data-src="images/gallery9-300x250.jpg" alt="rain droplets on a car window">
                     <figcaption>
                         <p>Gentle Rain</p>
                     </figcaption>
