--- a/lesson6/gallery-7.html
+++ b/lesson6/gallery-7.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <title>Weather Gallery: Enlightened Day</title>
-    <meta name="description" content="preston page for weather site">
+    <meta name="description" content="gallery page for weather site">
     
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
