--- a/weathersite/fishhaven.html
+++ b/weathersite/fishhaven.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <title>Fish Haven: Enlightened Day</title>
-    <meta name="description" content="preston page for weather site">
+    <meta name="description" content="fish haven page for weather site">
     
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
