--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -15,8 +15,8 @@
     <h1>Progressive loading</h1>
     <picture>
         <img src="images/placeholder.png"
-         data-src="http://placekitten.com/300/400" 
-         alt="kitten">
+         data-src="https://picsum.photos/300/400" 
+         alt="random image">
     </picture>
     <picture>
         <img src="images/placeholder.png" 
@@ -31,12 +31,12 @@
     <picture>
         <img src="images/placeholder.png" 
         data-src="https://picsum.photos/300/400" 
-        alt="random">
+        alt="random image">
     </picture>
     <picture>
         <img src="images/placeholder.png" 
-        data-src="http://placebeard.it/300x400" 
-        alt="beard">
+        data-src="https://picsum.photos/300/400" 
+        alt="random image">
     </picture>
 </main>
 <footer></footer>
