--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -15,7 +15,7 @@
     <h1>Progressive loading</h1>
     <picture>
         <img src="images/placeholder.png"
-         data-src="https://picsum.photos/300/400" 
+         data-src="https://picsum.photos/300/400/?blur" 
          alt="random image">
     </picture>
     <picture>
@@ -35,7 +35,7 @@
     </picture>
     <picture>
         <img src="images/placeholder.png" 
-        data-src="https://picsum.photos/300/400" 
+        data-src="https://picsum.photos/300/400?grayscale" 
         alt="random image">
     </picture>
 </main>
