--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -15,7 +15,7 @@
     <h1>Progressive loading</h1>
     <picture>
         <img src="images/placeholder.png"
-         data-src="https://picsum.photos/300/400/?blur=0" 
+         data-src="https://picsum.photos/300/400.jpg" 
          alt="random image">
     </picture>
     <picture>
