--- a/weathersite/fishhaven.html
+++ b/weathersite/fishhaven.html
@@ -34,7 +34,7 @@
                 <li><a href="sodasprings.html">Soda Springs</a></li>
                 <li><a class="active" href="fishhaven.html">Fish Haven</a></li>
                 <li><a href="#">Storm Center</a></li>
-                <li><a href="#">Gallery</a></li>
+                <li><a href="gallery-7.html">Gallery</a></li>
             </ul>
         </div>
     </nav>
