--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -64,8 +64,8 @@
             </table>
         </main>
         <footer>
-            <footer><p>&copy; <span id="getYear"></span> | Matthew J. Felton | <span id="currentYear"></span> </p></footer>
+            <footer><p>&copy; 2021 | Matthew J. Felton  </p></footer>
         </footer>
-        <script src="js/scripts.js"></script>
+
     </body>
 </html>
