--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -20,9 +20,9 @@
                         <th colspan="3" class="title">ACME Wildwest</th>
                     </tr>
                     <tr>
-                        <th>Period</td>
-                        <th>Sales</td>
-                        <th>Period</td>
+                        <th>Period</th>
+                        <th>Sales</th>
+                        <th>Period</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -63,9 +63,9 @@
                 </tfoot>
             </table>
         </main>
-        <footer>
-            <footer><p>&copy; 2021 | Matthew J. Felton  </p></footer>
-        </footer>
+       
+        <footer><p>&copy; 2021 | Matthew J. Felton  </p></footer>
+
 
     </body>
 </html>
