--- a/weathersite/preston.html
+++ b/weathersite/preston.html
@@ -33,7 +33,7 @@
                 <li><a class="active" href="preston.html">Preston</a></li>
                 <li><a href="sodasprings.html">Soda Springs</a></li>
                 <li><a href="fishhaven.html">Fish Haven</a></li>
-                <li><a href="#">Storm Center</a></li>
+                <li><a href="stormcenter.html">Storm Center</a></li>
                 <li><a href="gallery-7.html">Gallery</a></li>
             </ul>
         </div>
