--- a/weathersite/stormcenter.html
+++ b/weathersite/stormcenter.html
@@ -63,7 +63,7 @@
                         </datalist>
                     </label>
                     
-                        <label class="ftop">Storm Severity: <span id="stormseverity"></span></label>
+                        <label class="ftop">Storm Severity: <span id="stormseverity">5</span></label>
                         <label class="slider"><input type="range" name="severity" id="severity" min="1" max="10" step="1" value="5" 
                             oninput="changeSeverity(this.value);" onchange="changeSeverity(this.value);"></label>
                     <label class="ftop">Storm Region
