--- a/weathersite/stormcenter.html
+++ b/weathersite/stormcenter.html
@@ -68,7 +68,7 @@
                             oninput="changeSeverity(this.value);" onchange="changeSeverity(this.value);"></label>
                     <label class="ftop">Storm Region
                         <select name="region">
-                            <option value>Select Region </option>
+                            <option value>Select Region &#9662;</option>
                             <option value="preston">Preston</option>
                             <option value="sodasprings">Soda Springs</option>
                             <option value="fishhaven">Fish Haven</option>
