--- a/weathersite/stormcenter.html
+++ b/weathersite/stormcenter.html
@@ -64,8 +64,8 @@
                     </label>
                     
                         <label class="ftop">Storm Severity: <span id="stormseverity">5</span></label>
-                        <input class="slider" type="range" name="severity" id="severity" min="1" max="10" step="1" value="5" 
-                            oninput="changeSeverity(this.value);" onchange="changeSeverity(this.value);">
+                        <label><input class="slider" type="range" name="severity" id="severity" min="1" max="10" step="1" value="5" 
+                            oninput="changeSeverity(this.value);" onchange="changeSeverity(this.value);"></label>
                     <label class="ftop">Storm Region
                         <select name="region">
                             <option value>Select Region &#9662;</option>
