--- a/lesson9/prophets.html
+++ b/lesson9/prophets.html
@@ -7,7 +7,9 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1"/>
     <title>give me the title</title>
     <meta name="description" content="prophet cards" />
-    <link rel="stylesheet" href="" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/prophets.css" />
   </head>
   <body>
     <header>
