--- a/weathersite/preston.html
+++ b/weathersite/preston.html
@@ -29,7 +29,7 @@
         <button id="primaryClose" class="disabled" onclick="toggleMenu()">X Menu</button>
         <div class="maxSize">
             <ul id="primaryNav" class="nav disabled">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a class="active" href="preston.html">Preston</a></li>
                 <li><a href="sodasprings.html">Soda Springs</a></li>
                 <li><a href="fishhaven.html">Fish Haven</a></li>
