--- a/weathersite/index.html
+++ b/weathersite/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <title>Home : Enlightened Day</title>
-    <meta name="description" content="stormcenter page for weather site">
+    <meta name="description" content="Home page for weather site">
     
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
