--- a/weathersite/gallery-7.html
+++ b/weathersite/gallery-7.html
@@ -115,7 +115,7 @@
             </div>  
         </div>
     </main>
-    <footer><p>&copy; <span id="getYear"></span> | Matthew J. Felton | <span id="currentYear"></span> </p></footer>
+    <footer><p>&copy; <span id="getYear"></span> | Matthew J. Felton | <span id="currentYear"></span> Weather Data provided by OpenWeatherMap </p></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/scripts.js"></script>
     <script src="js/imagehandling.js"></script>
