changed folder name

--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -136,5 +136,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/scripts.js"></script>
     <script src="js/windchill.js"></script>
+    <script src="js/forecast.js"></script>
 </body>
 </html>
