--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
           <li>Lesson 05: <a class="assignments" href="lesson5/preston.html">Preston V2</a></li>
           <li>Lesson 06: <a class="assignments" href="start">Start</a> | <a class="assignments" href="lesson6/preston.html">Image Size Preston</a></li>
           <li>Lesson 07: <a class="assignments" href="lesson7/lazyload.html">LazyLoad</a> | <a class="assignments" href="lesson6/gallery-7.html">Weather Gallery</a></li>
-          <li>Lesson 08: <a class="assignments" href="form-start/">Form Start</a> | <a class="assignments" href="lesson8/tablebuild.html">Table Build</a> | <a class="assignments" href="weathersite/stormcenter.html">StormCenter</a></li>
-          <li>Lesson 09: <a class="assignments" href="lesson9/prophets.html">Prophets</a> | <a class="assignments" href="weathersite/">Weather Site Home</a> | <a class="assignments" href="lesson9/home-wireframes.html">Home Reference Page</a> </li>
-          <li>Lesson 10: <a class="assignments" href="lesson10/api-test.html">API Test</a> | <a class="assignments" href="JSON_start/">Json-Start</a> | <a class="assignments" href="#">#</a></li>
+          <li>Lesson 08: <a class="assignments" href="form-start/">Form Start</a> | <a class="assignments" href="lesson8/tablebuild.html">Table Build</a> | <a class="assignments" href="lesson11/stormcenter.html">StormCenter</a></li>
+          <li>Lesson 09: <a class="assignments" href="lesson9/prophets.html">Prophets</a> | <a class="assignments" href="lesson11/">Weather Site Home</a> | <a class="assignments" href="lesson9/home-wireframes.html">Home Reference Page</a> </li>
+          <li>Lesson 10: <a class="assignments" href="lesson10/api-test.html">API Test</a> | <a class="assignments" href="JSON_start/">Json-Start</a> | <a class="assignments" href="lesson11/preston.html">Preston V3</a></li>
         </ul>
       </nav>
     </main>
