--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -57,11 +57,11 @@
                     <p>Wind Speed:</p>
                 </div>
                 <div class="label_data">
-                    <p>Sunny</p>
-                    <p><span id="temp">40</span>&#176;F</p>
+                    <p><span id="currently"></span></p>
+                    <p><span id="temp"></span>&#176;F</p>
                     <p><span id="windChill"></span></p>
-                    <p>20%</p>
-                    <p><span id="windSpeed">2</span> mph</p>
+                    <p><span id="humidity"></span></p>
+                    <p><span id="windSpeed"></span> mph</p>
                 </div>
             </section>
         </div>
@@ -135,6 +135,7 @@
     <footer><p>&copy; <span id="getYear"></span> | Matthew J. Felton | <span id="currentYear"></span> Weather Data provided by OpenWeatherMap </p></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="js/sforecast.js"></script>
     <script src="js/windchill.js"></script>
 </body>
 </html>
