--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -67,31 +67,8 @@
         </div>
         <div class="forecast">
             <h2>Five Day Forecast</h2>
-            <section class="w_forecast">
-            <div class="w_box">
-                <h3>Monday</h3>
-                <img class="w_icon" src="images/storm.svg" alt="icon of weather forcast">
-                <p><strong>High:</strong> 50&#176;</p>
-            </div>
-            <div class="w_box">
-                <h3>Tuesday</h3>
-                <img class="w_icon" src="images/cloudy.svg" alt="icon of weather forcast">
-                <p><strong>High:</strong> 41&#176;</p>
-            </div>
-            <div class="w_box">
-                <h3>Wednesday</h3>
-                <img class="w_icon" src="images/sunny.svg" alt="icon of weather forcast">
-                <p><strong>High:</strong> 37&#176;</p>
-            </div>
-            <div class="w_box">
-                <h3>Thursday</h3>
-                <img class="w_icon" src="images/cloudy.svg" alt="icon of weather forcast">
-                <p><strong>High:</strong> 39&#176;</p>
-            </div>
-            <div class="w_box">
-                <h3>Friday</h3>
-                <img class="w_icon" src="images/sunny.svg" alt="icon of weather forcast">
-                <p><strong>High:</strong> 59&#176;</p>
+            <section class="w_forecast" id="weatherforecast">
+            
             </div>
         </section>
         </div>
