--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -67,8 +67,8 @@
         </div>
         <div class="forecast">
             <h2>Five Day Forecast</h2>
-            <section class="w_forecast">
-            <div class="w_box">
+            <section class="w_forecast" id="weatherforecast">
+            <!--<div class="w_box">
                 <h3>Monday</h3>
                 <img class="w_icon" src="images/sunny.svg" alt="icon of weather forcast">
                 <p><strong>High:</strong> 52&#176;</p>
@@ -92,7 +92,7 @@
                 <h3>Friday</h3>
                 <img class="w_icon" src="images/sunny.svg" alt="icon of weather forcast">
                 <p><strong>High:</strong> 60&#176;</p>
-            </div>
+            </div>-->
         </section>
         </div>
         <div class="article">
