--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -67,33 +67,9 @@
         </div>
         <div class="forecast">
             <h2>Five Day Forecast</h2>
-            <section class="w_forecast">
-            <div class="w_box">
-                <h3>Monday</h3>
-                <img class="w_icon" src="images/sunny.svg" alt="icon of weather forcast">
-                <p><strong>High:</strong> 53&#176;</p>
-            </div>
-            <div class="w_box">
-                <h3>Tuesday</h3>
-                <img class="w_icon" src="images/sunny.svg" alt="icon of weather forcast">
-                <p><strong>High:</strong> 44&#176;</p>
-            </div>
-            <div class="w_box">
-                <h3>Wednesday</h3>
-                <img class="w_icon" src="images/cloudy.svg" alt="icon of weather forcast">
-                <p><strong>High:</strong> 37&#176;</p>
-            </div>
-            <div class="w_box">
-                <h3>Thursday</h3>
-                <img class="w_icon" src="images/cloudy.svg" alt="icon of weather forcast">
-                <p><strong>High:</strong> 40&#176;</p>
-            </div>
-            <div class="w_box">
-                <h3>Friday</h3>
-                <img class="w_icon" src="images/storm.svg" alt="icon of weather forcast">
-                <p><strong>High:</strong> 62&#176;</p>
-            </div>
-        </section>
+            <section class="w_forecast" id="weatherforecast">
+            
+            </section>
         </div>
         <div class="article">
             <h2>Article Title</h2>
